fix a11y contrast

--- a/src/css/index.scss
+++ b/src/css/index.scss
@@ -114,7 +114,7 @@
   &-date {
     display: block;
     margin-bottom: 4px;
-    color: #738a94;
+    color: #5c6f77;
     font-size: 0.8rem;
     line-height: 1.15em;
     font-weight: 500;
